fix flexx align-item

--- a/FL12_HW2/homework/css/style.css
+++ b/FL12_HW2/homework/css/style.css
@@ -28,6 +28,7 @@
 
 .flex-2-col {
   display: flex;
+  align-items: center;
 }
 
 .tm-section-title {
